@@ -1,4 +1,5 @@
 v2.4.0
+- refactor(config): Dynamically generate the language selection list to improve maintainability. This removes the need for manual re-numbering when adding/removing languages and ensures the default language selection is always correct.
 - feat (UX): Added display of the specific reason for mod exclusion in the final summary (e.g., 'Excluded by user in config.ini' or 'API data unavailable').
 - feat (i18n): Added language support for Polish (pl_PL).
 - i18n: Added translation keys across all 12 supported languages to ensure full support for the new exclusion messages.
